--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "bgfx.cmake"]
-	path = bgfx.cmake
+	path = modules/bgfx.cmake
 	url = https://github.com/BanMing/bgfx.cmake.git
 	branch = banming
