--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,4 @@
 
 include_directories(${PROJECT_SOURCE_DIR}/src/)
 
-
-file(GLOB_RECURSE MAIN_FILES main.cpp)
-
-add_executable(${PROJECT_NAME} ${MAIN_FILES})
+add_subdirectory(main)
