--- a/src/apps/helloworld/CMakeLists.txt
+++ b/src/apps/helloworld/CMakeLists.txt
@@ -6,6 +6,6 @@ set(
 
 add_library(app_helloworld STATIC ${HELLOWORLD_APP_SOURCES})
 
-target_link_libraries(app_helloworld PRIVATE app_interface bx bimg bgfx example-common)
+target_link_libraries(app_helloworld PRIVATE app_interface)
 
 set_target_properties(app_helloworld PROPERTIES FOLDER "apps")
