--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "files.associations": {
+        "*.cfg": "coffeescript",
+        "ctime": "cpp",
+        "xlocale": "cpp"
+    }
 }
